cabal-version:      3.0
name:               adventofcode2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             P. Isaac Hildebrandt
maintainer:         p.isaac.hildebrandt@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Day01
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcode2022
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        adventofcode2022

    hs-source-dirs:   app
    default-language: Haskell2010
